# MenuFramework

./: .coveralls.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
include/: DataFile.hh  GraphicsRenderer.hh  InputManager.hpp  Localization.hh  Menu.hh  MenuFramework.hpp  MenuItem.hh  Point.hpp  ScriptEngine.hh  StyleSheet.hh  export.h
renderers/term-native/: NativeInput.hpp  NativeRenderer.hpp
renderers/xcurses/: XCursesInput.hpp  XCursesRenderer.hpp
src/: DataFile.cpp  GraphicsRenderer.cpp  Localization.cpp  Menu.cpp  MenuItem.cpp  ScriptEngine.cpp  StyleSheet.cpp
test/: CMakeLists.txt  auto.cpp  basic.cpp  en-US.json  example.cpp  menu.xml  style.json
